<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="4dp"
    android:elevation="8dp"
    app:cardElevation="8dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#292929">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_LBL_materialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_name"
            android:maxLines="2"
            android:minLines="2"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_LBL_fileType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/material_LBL_materialName"
            android:layout_marginRight="5dp"
            android:text="@string/file_type"
            android:textColor="#FFFFFF"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_LBL_fileSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/material_LBL_fileType"
            android:layout_marginRight="5dp"
            android:text="@string/file_size"
            android:textColor="#FFFFFF"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/material_LBL_uploadUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/material_LBL_fileSize"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="5dp"
            android:text="@string/uploaded_by_user"
            android:textColor="#FFFFFF"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>