<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CourseListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#212121"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/main_FAB_addcourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#FF9800"
            android:text="@string/add_course"
            android:textColor="@color/black" />

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_LST_courses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_centerInParent="true"
        tools:listitem="@layout/course_item" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/main_ET_searchcourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:hint="@string/search_course"
        android:maxLength="30"
        />

</androidx.appcompat.widget.LinearLayoutCompat>